2005-05-10  Thomas Koenig  <Thomas.Koenig@online.de>

PR fortran/27470
	* trans-array.c(gfc_array_allocate):  If ref->next exists
	that is if there is a statement like ALLOCATE(foo%bar(2)),
	F95 rules require that bar should be a pointer.

2005-05-10  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/27470
	* gfortran.dg/multiple_allocation_2.f90:  New test case.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113680 138bc75d-0d04-0410-961f-82ee72b054a4